--- a/resrc/lightPanel.ui
+++ b/resrc/lightPanel.ui
@@ -48,15 +48,11 @@
     <number>0</number>
    </property>
    <item row="0" column="0">
-    <widget class="QGroupBox" name="propertiesGroup">
+    <widget class="QGroupBox" name="groupBox">
      <property name="styleSheet">
-      <string notr="true">QGroupBox {
+      <string notr="true">QGroupBox{
 background-color: #484848;
 border: none;
-}
-
-QGroupBox[state=&quot;solor&quot;] {
-border: 1px solid orange;
 }
 
 QSpinBox, QDoubleSpinBox
@@ -528,13 +524,13 @@ QPushButton:checked
           </property>
           <property name="minimumSize">
            <size>
-            <width>45</width>
+            <width>50</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>45</width>
+            <width>50</width>
             <height>16777215</height>
            </size>
           </property>
@@ -655,45 +651,6 @@ padding-left: 10px;
           </property>
           <property name="readOnly">
            <bool>false</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="identContainer">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>20</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>20</height>
-           </size>
-          </property>
-          <property name="font">
-           <font>
-            <pointsize>7</pointsize>
-            <italic>true</italic>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">QLabel{
-background-color: #606060;
-color: #606060;
-border-radius: 0px;
-padding-right: 10px;
-}</string>
-          </property>
-          <property name="text">
-           <string>.</string>
           </property>
          </widget>
         </item>
